# NitroCppTest-LanLiu

./: CustomStruct.cpp  README.md  RectDef.cpp  readme.md
RectIntersection/: CMakeList.txt  ConsoleApplication4.sln
RectIntersection/ConsoleApplication4/: CMakeLists.txt  ConsoleApplication4.vcxproj  ConsoleApplication4.vcxproj.filters  CustomStruct.cpp  RectDef.cpp  main.cpp  readme.md  result.json
RectIntersection/ConsoleApplication4/Debug/: ConsoleApplication4.pch  vc140.idb
RectIntersection/ConsoleApplication4/Debug/ConsoleA.B903A66E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RectIntersection/ConsoleApplication4/Debug/RectIntersection.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RectIntersection.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RectIntersection/ConsoleApplication4/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
RectIntersection/ConsoleApplication4/include/: CustomStruct.h  RectDef.h
RectIntersection/Debug/: ConsoleApplication4.ilk  RectIntersection.ilk
RectIntersection/ipch/CONSOLEAPPLICATION4-6a38eda6/: RECTINTERSECTION-fcce6411.ipch
RectIntersection/ipch/CONSOLEAPPLICATION4-bd02873c/: CONSOLEAPPLICATION4-82664867.ipch  RECTINTERSECTION-fcce6411.ipch
RectIntersection/ipch/CONSOLEAPPLICATION4-ed83fb1/: RECTINTERSECTION-fcce6411.ipch
include/: CustomStruct.h  Output.h  RectDef.h
